# tc_fiap_fase5

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  STATUS_ATUAL_PROJETO.md  STATUS_CHECK_LIST.md  docker-compose.dev.yml  docker-compose.ollama.yml  docker-compose.yml  dvc.yaml  history.txt  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
artifacts/: .gitignore
artifacts/evaluation/scenario_analysis/: high_churn_customer.json
artifacts/scenario_analysis/drift/: age_drift.jsonl  age_drift_manifest.json  baseline_like.jsonl  baseline_like_manifest.json  high_risk_prediction_drift.jsonl  high_risk_prediction_drift_manifest.json  mixed_extreme_drift.jsonl  mixed_extreme_drift_manifest.json  wealth_drift.jsonl  wealth_drift_manifest.json
configs/: monitoring_config.yaml  pipeline_config.yaml  pipeline_global_config.yaml
configs/evaluation/: golden_set.yaml
configs/model_lifecycle/: README.md  current.json  model_current.json
configs/model_lifecycle/experiments/: gradient_boosting_v1.json  gradient_boosting_v2.json  gradient_boosting_v3.json  gradient_boosting_v4.json  random_forest_v1.json  random_forest_v2.json  random_forest_v2.yaml  random_forest_v3.json  random_forest_v3.yaml  rf_v1.json  rf_v2_precision.json  rf_v3_recall.json  xgboost_v1.json
configs/monitoring/: global_monitoring.yaml
configs/monitoring/grafana/dashboards/: llm_chat_operational_dashboard.json  rag_operational_dashboard.json
configs/observability/: prometheus.yml
configs/observability/grafana/dashboards/: serving_operational_dashboard.json
configs/observability/grafana/provisioning/dashboards/: dashboards.yml
configs/scenario_experiments/: inference_cases.yaml
configs/training/: README.md  model_current.yaml
configs/training/experiments/: gradient_boosting_v1.yaml  random_forest_baseline.yaml  random_forest_challenger.yaml  random_forest_v1.yaml  random_forest_v2.yaml  random_forest_v3.yaml  xgboost_v1.yaml
data/: .gitignore  golden-set.json
data/interim/: .gitignore
data/processed/: .gitignore  feature_columns.json  schema_report.json  test.parquet  train.parquet
data/raw/: Customer-Churn-Records.csv.dvc
docs/: AGENT_REACT.md  ARTIFACTS.md  DRIFT_MONITORING.md  EVALUATION.md  EVALUATION_METRICS.md  EVALUATION_MODEL_METRICS.md  EVALUATION_RAGAS.md  FEATURE_STORE.md  FLOWS.md  LGPD_PLAN.md  MODEL_CARD.md  MODEL_VERSIONING.md  MONITORING_OBSERVABILITY.md  OPERATIONS_DASHBOARD.md  OWASP_MAPPING.md  RAG_EXPLANATION.md  RED_TEAM_REPORT.md  SCENARIO_ANALYSIS.md  SUMARIO.md  SYNTHETIC_PREDICTIONS_GENERATOR.md  SYSTEM_CARD.md  TRIGGERS.md  WHAT_IF.md
docs/ADR/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md
docs/ADRs/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md
evaluation/: ab_test_prompts.py  artifacts.py  llm_judge.py  ragas_eval.py
examples/scenario_analysis/: churn_validation_suite.json
examples/what_if/: churn_validation_suite.json  high_churn_customer.json
feature_store/: feature_store.yaml  repo.py
infra/dockerfiles/evaluation/: Dockerfile
infra/dockerfiles/mlflow/: Dockerfile
infra/dockerfiles/serving/: Dockerfile
notebooks/: churn_bancario_sem_mlops.ipynb
scripts/: generate_business_features.py  generate_metadatastore_features.py  generate_synthetic_predictions.py  list_ollama_models.py
src/: __init__.py
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/agent/llm_gateway/: __init__.py  factory.py
src/agent/llm_gateway/providers/: __init__.py  base.py  claude.py  ollama.py  openai.py
src/common/: config_loader.py  data_loader.py  logger.py  seed.py  timezone.py
src/evaluation/: __init__.py
src/evaluation/llm_agent/: __init__.py  ab_test_prompts.py  artifacts.py  llm_judge.py  ragas_eval.py
src/evaluation/model/: __init__.py
src/evaluation/model/drift/: __init__.py  drift.py  prediction_logger.py  synthetic_drifts.py
src/feast_ops/: __init__.py  config.py  demo.py  export.py
src/feature_engineering/: feature_engineering.py  pipeline_components.py  schema_validation.py
src/features/: feature_engineering.py  pipeline_components.py  schema_validation.py
src/inference/: __init__.py  scenario_analysis.py  what_if.py
src/llm/: factory.py
src/llm/providers/: claude.py  ollama.py  openai.py
src/model_lifecycle/: promotion.py  retraining.py  train.py
src/model_lifecycle/business_metrics/: __init__.py  base.py  evaluator.py  precision_at_top_k.py  recall_at_top_k.py  utils.py
src/models/: baseline.py  catalog.py  promotion.py  retraining.py  train.py
src/monitoring/: __init__.py  drift.py  inference_log.py  metrics.py  synthetic_batches.py
src/scenario_analysis/: inference_cases.py  synthetic_drifts.py
src/scenario_experiments/: __init__.py  inference_cases.py
src/security/: guardrails.py  pii_detection.py
src/serving/: Dockerfile  app.py  llm_routes.py  pipeline.py  routes.py  schemas.py
src/serving/templates/: llm_playground.html
tests/: conftest.py  test_ab_test_prompts.py  test_agent.py  test_api.py  test_business_metrics.py  test_config_loader.py  test_evaluation_artifacts.py  test_feast_export.py  test_feature_store_repo.py  test_features.py  test_golden_set.py  test_guardrails.py  test_guardrails_adversarial.py  test_llm_judge.py  test_llm_routes.py  test_models.py  test_monitoring.py  test_promotion.py  test_rag_pipeline.py  test_ragas_eval.py  test_retraining.py  test_scenario_analysis.py  test_script_generators.py  test_serving.py  test_synthetic_batches.py  test_synthetic_predictions_generator.py  test_what_if.py
