[project]
name = "tc-fiap-fase5"
version = "0.1.0"
description = "Projeto de Datathon - FIAP 2026"
authors = [
    {name = "Márcio Lima",email = "marciocad@gmail.com"},
    {name = "Luca Poit",email = "lucapoit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "anthropic>=0.69.0",
    "joblib>=1.4.2",
    "numpy>=1.26.0",
    "openai>=1.109.1",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "rich>=13.9.0,<14",
    "scikit-learn>=1.4.2",
]

[project.optional-dependencies]
serving = [
    "cryptography>=41.0.0",
    "fastapi[standard]>=0.135.3,<0.136.0",
    "feast[redis]>=0.57.0,<0.62.0",
    "mlflow==3.10.1",
    "prometheus-client>=0.22.1,<0.23",
    "pyarrow>=16.0.0",
    "pyopenssl>=23.0.0",
    "sentence-transformers>=2.2.0",
    # sentence-transformers puxa torch; 2.1.x não tem wheel cp313 (Win/Linux). 2.5+ suporta Python 3.13.
    "torch>=2.5.0",
    "uvicorn>=0.30.0",
]
training = [
    "cryptography>=41.0.0",
    "feast[redis]>=0.57.0,<0.62.0",
    "mlflow==3.10.1",
    "pandera>=0.19.3",
    "pyarrow>=16.0.0",
    "pyopenssl>=23.0.0",
    "xgboost>=2.1.0,<3",
]
monitoring = [
    "evidently>=0.7.21,<0.8",
    "mlflow==3.10.1",
    "pyarrow>=16.0.0",
]
evaluation = [
    "datasets>=2.14.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "ragas>=0.4.0,<0.5",
    "sentence-transformers>=2.2.0",
    # sentence-transformers puxa torch; 2.1.x não tem wheel cp313 (Win/Linux). 2.5+ suporta Python 3.13.
    "torch>=2.5.0",
]
ops = [
    "dvc[gdrive]>=3.67.1,<4.0.0",
]

[tool.poetry]
packages = [
    { include = "evaluation" },
    { include = "agent", from = "src" },
    { include = "common", from = "src" },
    { include = "feast_ops", from = "src" },
    { include = "features", from = "src" },
    { include = "models", from = "src" },
    { include = "monitoring", from = "src" },
    { include = "scenario_analysis", from = "src" },
    { include = "security", from = "src" },
    { include = "serving", from = "src" },
    { include = "llm", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
ruff = "^0.15.9"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = '-p no:warnings'

[tool.taskipy.tasks]
appstack = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml up -d'
appstack_down = 'docker compose -f docker-compose.yml -f docker-compose.ollama.yml down'
appstack_ollama = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml -f docker-compose.ollama.yml up -d'
appstack_ollama_rebuild = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml -f docker-compose.ollama.yml up -d --build'
appstack_rebuild = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml up -d --build'
# Benchmark offline com 3 variantes de prompt; use --with-judge para enriquecer.
eval_ab_test_prompts = 'python -m evaluation.ab_test_prompts'
eval_all = 'python -m evaluation.ragas_eval && python -m evaluation.llm_judge && python -m evaluation.ab_test_prompts'
# LLM-as-judge (>=3 criterios, incl. negocio) — usa o mesmo provider LLM configurado.
eval_llm_judge = 'python -m evaluation.llm_judge'
# RAGAS (4 métricas) sobre o golden set — requer provider LLM configurado e, na 1a vez, download do modelo de embeddings.
eval_ragas = 'python -m evaluation.ragas_eval'
feastapply = 'FEAST_REDIS_CONNECTION_STRING=localhost:6379 feast -c feature_store apply'
feastdemo = 'FEAST_REDIS_CONNECTION_STRING=localhost:6379 python -m src.feast_ops.demo --customer-id 15634602'
feastexport = 'python -m src.feast_ops.export'
feastmaterialize = 'FEAST_REDIS_CONNECTION_STRING=localhost:6379 feast -c feature_store materialize-incremental $(date -u +"%Y-%m-%dT%H:%M:%S")'
format = 'ruff format'
lint = 'ruff check'
mldrift = 'python -m src.monitoring.drift'
mldriftdemo = 'python -m src.monitoring.drift --current data/processed/test.parquet'
mlfeateng = 'python -m src.features.feature_engineering'
mlflow = 'mlflow server --backend-store-uri file:./mlruns --default-artifact-root ./mlruns --host 127.0.0.1 --port 5000'
mlretrain = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.models.retraining'
mlrunall = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.models.train && python -m src.models.train --config configs/training/experiments/random_forest_v1.yaml && python -m src.models.train --config configs/training/experiments/random_forest_v2.yaml && python -m src.models.train --config configs/training/experiments/random_forest_v3.yaml && python -m src.models.train --config configs/training/experiments/xgboost_v1.yaml && python -m src.models.train --config configs/training/experiments/gradient_boosting_v1.yaml && python -m src.scenario_analysis.inference_cases --suite-file configs/scenario_analysis/inference_cases.yaml'
mlrunexperiments = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.models.train && python -m src.models.train --config configs/training/experiments/random_forest_v1.yaml && python -m src.models.train --config configs/training/experiments/random_forest_v2.yaml && python -m src.models.train --config configs/training/experiments/random_forest_v3.yaml && python -m src.models.train --config configs/training/experiments/xgboost_v1.yaml && python -m src.models.train --config configs/training/experiments/gradient_boosting_v1.yaml'
mlscenarios = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.scenario_analysis.inference_cases --suite-file configs/scenario_analysis/inference_cases.yaml'
mlsyntheticdrift = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.scenario_analysis.synthetic_drifts --all'
mltrain = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.models.train'
# Lista modelos disponiveis no ambiente Ollama configurado no YAML.
ollama_list = 'python scripts/list_ollama_models.py'
post_test = 'coverage html'
pre_format = 'ruff check --fix'
pre_test = 'task lint'
serving = 'fastapi dev src/serving/app.py'
test = 'pytest -s -x --cov=src -vv'
