[project]
name = "tc-fiap-fase5"
version = "0.1.0"
description = "Projeto de Datathon - FIAP 2026"
authors = [
    {name = "Márcio Lima",email = "marciocad@gmail.com"},
    {name = "Luca Poit",email = "lucapoit@gmail.com"},
    {name = "Luca Poit",email = "gabriel.jordan.aa@gmail.com"},
    {name = "Luciana Ferreira",email = "Luannabyll@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "anthropic>=0.69.0",
    "joblib>=1.4.2",
    "numpy>=1.26.0",
    "openai>=1.109.1",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "rich>=13.9.0,<14",
    "scikit-learn>=1.4.2",
]

[project.optional-dependencies]
serving = [
    "cryptography>=41.0.0",
    "fastapi[standard]>=0.135.3,<0.136.0",
    "feast[redis]>=0.57.0,<0.62.0",
    "fastembed>=0.7.0,<0.9.0",
    "mlflow==3.10.1",
    "prometheus-client>=0.22.1,<0.23",
    "pyarrow>=16.0.0",
    "pyopenssl>=23.0.0",
    "uvicorn>=0.30.0",
]
training = [
    "cryptography>=41.0.0",
    "feast[redis]>=0.57.0,<0.62.0",
    "mlflow==3.10.1",
    "pandera>=0.19.3",
    "pyarrow>=16.0.0",
    "pyopenssl>=23.0.0",
    "xgboost>=2.1.0,<3",
]
monitoring = [
    "evidently>=0.7.21,<0.8",
    "mlflow==3.10.1",
    "pyarrow>=16.0.0",
]
evaluation = [
    "datasets>=2.14.0",
    "fastembed>=0.7.0,<0.9.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "ragas>=0.4.0,<0.5",
]
ops = [
    "dvc[gdrive]>=3.67.1,<4.0.0",
]

[tool.poetry]
packages = [
    { include = "agent", from = "src" },
    { include = "common", from = "src" },
    { include = "evaluation", from = "src" },
    { include = "feast_ops", from = "src" },
    { include = "feature_engineering", from = "src" },
    { include = "model_lifecycle", from = "src" },
    { include = "monitoring", from = "src" },
    { include = "scenario_experiments", from = "src" },
    { include = "security", from = "src" },
    { include = "serving", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
ruff = "^0.15.9"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = '-p no:warnings'

[tool.taskipy.tasks]
appstack = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml up -d'
appstack_down = 'docker compose -f docker-compose.yml -f docker-compose.ollama.yml down'
appstack_dev = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d'
appstack_dev_rebuild = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d --build'
appstack_ollama = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml -f docker-compose.ollama.yml up -d'
appstack_ollama_rebuild = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml -f docker-compose.ollama.yml up -d --build'
appstack_rebuild = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose -f docker-compose.yml up -d --build'

# Benchmark offline com 3 variantes de prompt; use --with-judge para enriquecer.
eval_ab_test_prompts = 'python -m src.evaluation.llm_agent.ab_test_prompts'
eval_ab_test_prompts_sample = 'python -m src.evaluation.llm_agent.ab_test_prompts --max-rows 5'
eval_all = 'python -m src.evaluation.llm_agent.ragas_eval && python -m src.evaluation.llm_agent.llm_judge && python -m src.evaluation.llm_agent.ab_test_prompts'
eval_all_docker = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose --profile evaluation run --rm -e RAGAS_SERVING_BASE_URL=http://serving:8000 evaluation sh -lc "python -m src.evaluation.llm_agent.ragas_eval && python -m src.evaluation.llm_agent.llm_judge && python -m src.evaluation.llm_agent.ab_test_prompts"'
eval_all_sample = 'python -m src.evaluation.llm_agent.ragas_eval --max-rows 5 && python -m src.evaluation.llm_agent.llm_judge --max-rows 5 && python -m src.evaluation.llm_agent.ab_test_prompts --max-rows 5'
eval_all_sample_docker = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose --profile evaluation run --rm -e RAGAS_SERVING_BASE_URL=http://serving:8000 evaluation sh -lc "python -m src.evaluation.llm_agent.ragas_eval --max-rows 5 && python -m src.evaluation.llm_agent.llm_judge --max-rows 5 && python -m src.evaluation.llm_agent.ab_test_prompts --max-rows 5"'
# LLM-as-judge (>=3 criterios, incl. negocio) — usa o mesmo provider LLM configurado.
eval_llm_judge = 'python -m src.evaluation.llm_agent.llm_judge'
eval_llm_judge_sample = 'python -m src.evaluation.llm_agent.llm_judge --max-rows 5'
# RAGAS (4 métricas) sobre o golden set — requer serving em execução.
eval_ragas = 'python -m src.evaluation.llm_agent.ragas_eval'
eval_ragas_docker = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose --profile evaluation run --rm -e RAGAS_SERVING_BASE_URL=http://serving:8000 evaluation python -m src.evaluation.llm_agent.ragas_eval'
eval_ragas_sample = 'python -m src.evaluation.llm_agent.ragas_eval --max-rows 5'
eval_ragas_sample_docker = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose --profile evaluation run --rm -e RAGAS_SERVING_BASE_URL=http://serving:8000 evaluation python -m src.evaluation.llm_agent.ragas_eval --max-rows 5'

feastapply = 'FEAST_REDIS_CONNECTION_STRING=localhost:6379 feast -c feature_store apply'
feastdemo = 'FEAST_REDIS_CONNECTION_STRING=localhost:6379 python -m src.feast_ops.demo --customer-id 15634602'
feastexport = 'python -m src.feast_ops.export'
feastmaterialize = 'FEAST_REDIS_CONNECTION_STRING=localhost:6379 feast -c feature_store materialize-incremental $(date -u +"%Y-%m-%dT%H:%M:%S")'

format = 'ruff format'
lint = 'ruff check'

rag_index = 'python -m src.agent.rag_pipeline'
rag_index_docker = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose --profile rag run --rm rag-index python -m src.agent.rag_pipeline'
rag_index_rebuild = 'python -m src.agent.rag_pipeline --force-rebuild'
rag_index_rebuild_docker = 'HOST_UID=$(id -u) HOST_GID=$(id -g) docker compose --profile rag run --rm rag-index'

mldrift = 'python -m src.evaluation.model.drift.drift'
mldriftdemo = 'python -m src.evaluation.model.drift.drift --current data/processed/test.parquet'

mlfeateng = 'python -m src.feature_engineering.feature_engineering'

mlflow = 'mlflow server --backend-store-uri file:./mlruns --default-artifact-root ./mlruns --host 127.0.0.1 --port 5000'
mlflowretrain = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.model_lifecycle.retraining'
mlflowrunall = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.model_lifecycle.train && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/random_forest_v1.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/random_forest_v2.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/random_forest_v3.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/xgboost_v1.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/gradient_boosting_v1.yaml && python -m src.scenario_experiments.inference_cases --suite-file configs/scenario_experiments/inference_cases.yaml'
mlflowrunexperiments = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.model_lifecycle.train && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/random_forest_v1.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/random_forest_v2.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/random_forest_v3.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/xgboost_v1.yaml && python -m src.model_lifecycle.train --config configs/model_lifecycle/experiments/gradient_boosting_v1.yaml'
mlflowscenarios = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.scenario_experiments.inference_cases --suite-file configs/scenario_experiments/inference_cases.yaml'
mlflowsyntheticdrift = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.evaluation.model.drift.synthetic_drifts --all'
mlflowrain = 'export MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI:-http://127.0.0.1:5000}; python -m src.model_lifecycle.train'

# Lista modelos disponiveis no ambiente Ollama configurado no YAML.
ollama_list = 'python scripts/list_ollama_models.py'

post_test = 'coverage html'
pre_format = 'ruff check --fix'
pre_test = 'task lint'
serving_reload = 'docker compose -f docker-compose.yml -f docker-compose.dev.yml restart serving'
test = 'pytest -s -x --cov=src -vv'
